--- a/index.html
+++ b/index.html
@@ -4,60 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MediaStream</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>MediaStream</h1>
-    <nav>
-      <a href="#inicio">Inicio</a>
-      <a href="#servicios">Servicios</a>
-      <a href="#sobre-nosotros">Sobre Nosotros</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
+    <div class="container header-container">
+      <div class="logo">MediaStream</div>
+      <nav>
+        <ul>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#sobre">Sobre Nosotros</a></li>
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <div class="hero" id="inicio">
-    <h1>Transformamos el entretenimiento en experiencias únicas</h1>
-    <button class="cta-btn">Descubre más</button>
-  </div>
-
-  <div class="about" id="sobre-nosotros">
-    <h2>Sobre MediaStream</h2>
-    <p>MediaStream nació en octubre de 2018 como mediasetROBLOX y más tarde se renombró MediaStream. Está compuesto por los grupos MediaTV, Media Producciones y Netblox. A lo largo de los años hemos adquirido una gran experiencia y alcanzado cifras récords de audiencia.</p>
-  </div>
-
-  <div class="services" id="servicios">
-    <h2>Servicios</h2>
-    <div class="service-card">
-      <h3>MediaTV</h3>
-      <p>Productora de programas televisivos. Desde 2018 hemos estado creando contenido original para diversas plataformas.</p>
+  <section class="hero" id="inicio">
+    <div class="container hero-content">
+      <h1>Transformamos el entretenimiento</h1>
+      <p>De mediasetROBLOX a MediaStream, evolucionamos junto a ti.</p>
+      <a href="#sobre" class="btn">Descubre Más</a>
     </div>
-    <div class="service-card">
-      <h3>Media Producciones</h3>
-      <p>Asociada con MediaTV, produce contenido televisivo y audiovisual tanto para MediaTV como para otras cadenas.</p>
-    </div>
-    <div class="service-card">
-      <h3>Netblox</h3>
-      <p>Productora de series que forma parte del grupo MediaStream. Nos especializamos en la creación de series innovadoras.</p>
-    </div>
-  </div>
+  </section>
 
-  <div class="contact" id="contacto">
-    <h2>Contacto</h2>
-    <p>Si estás interesado en colaborar con nosotros o en recibir más información, no dudes en ponerte en contacto.</p>
-    <p><strong>Correo electrónico:</strong> <a href="mailto:mediastreamrbx@gmail.com">mediastreamrbx@gmail.com</a></p>
-  </div>
+  <section class="about" id="sobre">
+    <div class="container">
+      <h2>Sobre MediaStream</h2>
+      <p>MediaStream nació en octubre de 2018 como mediasetROBLOX, y posteriormente se consolidó como MediaStream. El grupo está compuesto por MediaTV, Media Producciones y Netblox. En nuestro camino, hemos adquirido y creado proyectos que nos han llevado a alcanzar audiencias récord, como la gala FELIZ 2021.</p>
+    </div>
+  </section>
+
+  <section class="services" id="servicios">
+    <div class="container">
+      <h2>Nuestros Servicios</h2>
+      <div class="services-grid">
+        <div class="card">
+          <h3>MediaTV / MSTLIVE</h3>
+          <p>Desde 2018, nuestra productora de programas televisivos ha innovado en contenidos en vivo y producciones propias.</p>
+        </div>
+        <div class="card">
+          <h3>Media Producciones</h3>
+          <p>Producción de contenidos audiovisuales para MediaTV y otras cadenas. Siempre innovando y buscando la excelencia.</p>
+        </div>
+        <div class="card">
+          <h3>Netblox</h3>
+          <p>Productora de series y concursos musicales, incluyendo Nova Galantis, para ofrecer entretenimiento de calidad.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contacto">
+    <div class="container">
+      <h2>Contacto</h2>
+      <p>Si deseas colaborar o conocer más sobre nosotros, envíanos un correo:</p>
+      <a href="mailto:mediastreamrbx@gmail.com" class="email-link">mediastreamrbx@gmail.com</a>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2025 MediaStream</p>
-    <div class="socials">
-      <a href="#">YouTube</a> | <a href="#">Discord</a> | <a href="#">Twitch</a>
+    <div class="container footer-container">
+      <p>&copy; 2025 MediaStream</p>
+      <div class="socials">
+        <a href="#">YouTube</a>
+        <a href="#">Discord</a>
+        <a href="#">Twitch</a>
+      </div>
     </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
