--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Encabezado -->
   <header>
     <div class="container header-container">
       <div class="logo">MediaStream</div>
@@ -22,49 +23,57 @@
     </div>
   </header>
 
-  <section class="hero" id="inicio">
-    <div class="container hero-content">
-      <h1>Transformamos el entretenimiento</h1>
-      <p>De mediasetROBLOX a MediaStream, evolucionamos junto a ti.</p>
-      <a href="#sobre" class="btn">Descubre Más</a>
-    </div>
-  </section>
+  <!-- Contenido Principal -->
+  <main>
+    <!-- Hero Section -->
+    <section class="hero" id="inicio">
+      <div class="container hero-content">
+        <h1>Transformamos el entretenimiento</h1>
+        <p>De mediasetROBLOX a MediaStream, evolucionamos junto a ti.</p>
+        <a href="#sobre" class="btn">Descubre Más</a>
+      </div>
+    </section>
 
-  <section class="about" id="sobre">
-    <div class="container">
-      <h2>Sobre MediaStream</h2>
-      <p>MediaStream nació en octubre de 2018 como mediasetROBLOX, y posteriormente se consolidó como MediaStream. El grupo está compuesto por MediaTV, Media Producciones y Netblox. En nuestro camino, hemos adquirido y creado proyectos que nos han llevado a alcanzar audiencias récord, como la gala FELIZ 2021.</p>
-    </div>
-  </section>
+    <!-- Sección Sobre Nosotros -->
+    <section class="about" id="sobre">
+      <div class="container">
+        <h2>Sobre MediaStream</h2>
+        <p>MediaStream nació en octubre de 2018 como mediasetROBLOX y posteriormente se consolidó como MediaStream. El grupo está compuesto por MediaTV, Media Producciones y Netblox. Hemos alcanzado audiencias récord con proyectos como la gala FELIZ 2021.</p>
+      </div>
+    </section>
 
-  <section class="services" id="servicios">
-    <div class="container">
-      <h2>Nuestros Servicios</h2>
-      <div class="services-grid">
-        <div class="card">
-          <h3>MediaTV / MSTLIVE</h3>
-          <p>Desde 2018, nuestra productora de programas televisivos ha innovado en contenidos en vivo y producciones propias.</p>
-        </div>
-        <div class="card">
-          <h3>Media Producciones</h3>
-          <p>Producción de contenidos audiovisuales para MediaTV y otras cadenas. Siempre innovando y buscando la excelencia.</p>
-        </div>
-        <div class="card">
-          <h3>Netblox</h3>
-          <p>Productora de series y concursos musicales, incluyendo Nova Galantis, para ofrecer entretenimiento de calidad.</p>
+    <!-- Sección de Servicios -->
+    <section class="services" id="servicios">
+      <div class="container">
+        <h2>Nuestros Servicios</h2>
+        <div class="services-grid">
+          <div class="card">
+            <h3>MediaTV / MSTLIVE</h3>
+            <p>Productora de programas televisivos que ha innovado en contenidos en vivo y producciones propias desde 2018.</p>
+          </div>
+          <div class="card">
+            <h3>Media Producciones</h3>
+            <p>Producción de contenidos audiovisuales para MediaTV y otras cadenas, siempre buscando la excelencia.</p>
+          </div>
+          <div class="card">
+            <h3>Netblox</h3>
+            <p>Productora de series y concursos musicales, incluyendo Nova Galantis, para ofrecer entretenimiento de calidad.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="contact" id="contacto">
-    <div class="container">
-      <h2>Contacto</h2>
-      <p>Si deseas colaborar o conocer más sobre nosotros, envíanos un correo:</p>
-      <a href="mailto:mediastreamrbx@gmail.com" class="email-link">mediastreamrbx@gmail.com</a>
-    </div>
-  </section>
+    <!-- Sección de Contacto -->
+    <section class="contact" id="contacto">
+      <div class="container">
+        <h2>Contacto</h2>
+        <p>Si deseas colaborar o conocer más sobre nosotros, envíanos un correo:</p>
+        <a href="mailto:mediastreamrbx@gmail.com" class="email-link">mediastreamrbx@gmail.com</a>
+      </div>
+    </section>
+  </main>
 
+  <!-- Pie de Página -->
   <footer>
     <div class="container footer-container">
       <p>&copy; 2025 MediaStream</p>
