--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
   <main>
     <!-- Hero Section -->
     <section class="hero" id="inicio">
+      <div class="overlay"></div>
       <div class="container hero-content">
         <h1>Transformamos el entretenimiento</h1>
-        <p>De mediasetROBLOX a MediaStream, evolucionamos junto a ti.</p>
+        <p>De mediasetROBLOX a MediaStream: innovación en cada imagen.</p>
         <a href="#sobre" class="btn">Descubre Más</a>
       </div>
     </section>
@@ -38,7 +39,10 @@
     <section class="about" id="sobre">
       <div class="container">
         <h2>Sobre MediaStream</h2>
-        <p>MediaStream nació en octubre de 2018 como mediasetROBLOX y posteriormente se consolidó como MediaStream. El grupo está compuesto por MediaTV, Media Producciones y Netblox. Hemos alcanzado audiencias récord con proyectos como la gala FELIZ 2021.</p>
+        <p>
+          MediaStream nació en octubre de 2018 como mediasetROBLOX y se transformó en MediaStream.  
+          Conformado por MediaTV, Media Producciones y Netblox, hemos alcanzado nuevas audiencias con proyectos como la gala FELIZ 2021.
+        </p>
       </div>
     </section>
 
@@ -49,15 +53,15 @@
         <div class="services-grid">
           <div class="card">
             <h3>MediaTV / MSTLIVE</h3>
-            <p>Productora de programas televisivos que ha innovado en contenidos en vivo y producciones propias desde 2018.</p>
+            <p>Innovación en programas televisivos y contenido en vivo desde 2018.</p>
           </div>
           <div class="card">
             <h3>Media Producciones</h3>
-            <p>Producción de contenidos audiovisuales para MediaTV y otras cadenas, siempre buscando la excelencia.</p>
+            <p>Producción de contenido audiovisual de alta calidad para múltiples plataformas.</p>
           </div>
           <div class="card">
             <h3>Netblox</h3>
-            <p>Productora de series y concursos musicales, incluyendo Nova Galantis, para ofrecer entretenimiento de calidad.</p>
+            <p>Series y concursos musicales, incluyendo Nova Galantis, para un entretenimiento único.</p>
           </div>
         </div>
       </div>
@@ -67,7 +71,7 @@
     <section class="contact" id="contacto">
       <div class="container">
         <h2>Contacto</h2>
-        <p>Si deseas colaborar o conocer más sobre nosotros, envíanos un correo:</p>
+        <p>¿Quieres saber más o colaborar con nosotros? Escríbenos:</p>
         <a href="mailto:mediastreamrbx@gmail.com" class="email-link">mediastreamrbx@gmail.com</a>
       </div>
     </section>
