--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="#sobre">Sobre Nosotros</a></li>
-          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#empresas">Nuestras Empresas</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
@@ -30,7 +30,7 @@
       <div class="overlay"></div>
       <div class="container hero-content">
         <h1>Transformamos el entretenimiento</h1>
-        <p>De mediasetROBLOX a MediaStream: innovación en cada imagen.</p>
+        <p>De mediasetROBLOX a MediaStream, evolucionamos para ti.</p>
         <a href="#sobre" class="btn">Descubre Más</a>
       </div>
     </section>
@@ -41,27 +41,28 @@
         <h2>Sobre MediaStream</h2>
         <p>
           MediaStream nació en octubre de 2018 como mediasetROBLOX y se transformó en MediaStream.  
-          Conformado por MediaTV, Media Producciones y Netblox, hemos alcanzado nuevas audiencias con proyectos como la gala FELIZ 2021.
+          Conformado por MediaTV, Media Producciones y Netblox, hemos alcanzado nuevas audiencias y marcado hitos, como la gala FELIZ 2021. 
+          Nútrete del estatuto de MediaStream para conocer mejor a la empresa matriz y su evolución.
         </p>
       </div>
     </section>
 
-    <!-- Sección de Servicios -->
-    <section class="services" id="servicios">
+    <!-- Sección de Empresas -->
+    <section class="companies" id="empresas">
       <div class="container">
-        <h2>Nuestros Servicios</h2>
-        <div class="services-grid">
+        <h2>Nuestras Empresas</h2>
+        <div class="companies-grid">
           <div class="card">
             <h3>MediaTV / MSTLIVE</h3>
-            <p>Innovación en programas televisivos y contenido en vivo desde 2018.</p>
+            <p>Productora de programas televisivos y contenidos en vivo desde 2018.</p>
           </div>
           <div class="card">
             <h3>Media Producciones</h3>
-            <p>Producción de contenido audiovisual de alta calidad para múltiples plataformas.</p>
+            <p>Productora audiovisual que crea contenidos tanto para MediaTV como para otras cadenas.</p>
           </div>
           <div class="card">
             <h3>Netblox</h3>
-            <p>Series y concursos musicales, incluyendo Nova Galantis, para un entretenimiento único.</p>
+            <p>Especializada en series y concursos musicales, incluyendo Nova Galantis.</p>
           </div>
         </div>
       </div>
@@ -92,3 +93,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
